--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "MissingLibraryUsageFinder",
+  "name": "Missing Library Usage Finder",
   "id": "1258167373955403979",
   "api": "1.0.0",
   "main": "code.js",
